--- a/androidapp/app/build.gradle
+++ b/androidapp/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.0.0"
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    implementation "android.arch.paging:runtime:1.0.0-alpha4"
 }
