--- a/androidapp/app/build.gradle
+++ b/androidapp/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     implementation "android.arch.paging:runtime:1.0.0-alpha4"
+
+    implementation 'de.cketti.mailto:email-intent-builder:1.0.0'
 }
