--- a/androidapp/app/build.gradle
+++ b/androidapp/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     implementation "android.arch.paging:runtime:1.0.0-alpha4"
 
     implementation 'de.cketti.mailto:email-intent-builder:1.0.0'
+
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
 }
