--- a/androidapp/app/build.gradle
+++ b/androidapp/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     implementation 'de.cketti.mailto:email-intent-builder:1.0.0'
 
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+
+    implementation 'org.jsoup:jsoup:1.11.2'
 }
